--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
       <script src="browser.js"></script>
       <script>
           window.rtcMonitor = new Monitor({ backendUrl: 'http://localhost:9100/v1/stats/peer' });
+          window.rtcMonitor.UI();
       </script>
 
       <script>
