Use socket.io instead of axios for stat reporting

--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
 
       <script src="browser.js"></script>
       <script>
-          window.rtcMonitor = new Monitor() // new Monitor({ backendUrl: 'http://localhost:9100/v1/stats/peer' });
-          window.rtcMonitor.UI();
+          window.rtcMonitor = new Monitor({ token: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJwbHVnaW4iOnRydWUsImRvbWFpbiI6Im1lZXRyaXguaW8iLCJpYXQiOjE2NDA0OTQwMTAsImV4cCI6MTcyNjg5NDAxMCwic3ViIjoiNjFjNmYyNjZjNzU5MjAzMGRiYzViN2EwIn0.lF8zZMj--pOLslgpbP0LjC4FVotEOPQW-rN_2kucJCM'});
+          // window.rtcMonitor.UI();
       </script>
 
       <script>
