removing console logs

--- a/src/index.html
+++ b/src/index.html
@@ -243,8 +243,8 @@
 
           function onconnectionstatechange(pc, event) {
             if (pc) {
-              console.log(`${getName(pc)} connection state: ${pc.connectionState}`);
-              console.log('connection state change event: ', event);
+              //console.log(`${getName(pc)} connection state: ${pc.connectionState}`);
+              //console.log('connection state change event: ', event);
             }
           }
 
